code25_all/scala/11281115.txt
scala> class A
defined class A

scala> class B extends A
defined class B

B
A
scala> new A with B
<console>:10: error: class B needs to be a trait to be mixed in
             new A with B
                        ^

scala> class E {type T = A with B}
defined class E

scala> new E
res1: E = E@1f2bc83

